[package]
name = "go-game"
version = "0.1.0"
authors = ["Florent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4.19"

[dependencies.go-lib]
path = "../go-lib"

[dependencies.mcts-lib]
path = "../mcts-lib"


[dependencies.rust-tools]
path = "../rust-tools"