[package]
name = "go-lib"
version = "0.1.0"
authors = ["Florent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
bit-set = "0.5.2"
indexmap = "1.6.1"
log = "0.4.14"
#rpool = "1.0.1"
#generational-arena = "0.2.8"
#fixed-typed-arena = "0.1.0"

[dependencies.rust-tools]
path = "../rust-tools"
[dependencies.mcts-lib]
path = "../mcts-lib"
[dependencies.graph-lib]
path = "../graph-lib"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]