[package]
name = "graph-lib"
version = "0.1.0"
authors = ["Florent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpool = "1.0.1"
bit-set = "0.5.2"
indexmap = "1.6.1"
rand = "0.8.3"
indextree = "4.3.1"
log = "0.4.14"
env_logger = "0.8.3"

[dependencies.rust-tools]
path = "../rust-tools"
