[package]
name = "mini-nn"
version = "0.1.0"
authors = ["Florent"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4.19"
rand = "0.8.3"
rand-distributions = "0.1.2"
ordered-float = "2.1.1"
rand_distr = "0.4.0"

[dependencies.rust-tools]
path = "../rust-tools"
