[package]
name = "rust-tools"
version = "0.1.0"
authors = ["Florent"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
log = "0.4.14"
env_logger = "0.8.3"
chrono = "0.4.19"


[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]